[package]
name = "writedown"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"
license = "MIT"

categories = ["text-processing"]
keywords = ["writedown"]
readme = "README.md"
description = "Writedown format parser"
repository = "https://github.com/sk2sat/writedown-rs"

[dev-dependencies]
clap = "3.2.8"
